--- a/css/responsive.css
+++ b/css/responsive.css
@@ -52,9 +52,6 @@
 /* End Header */
 /* Start Home */
 @media (max-width: 767px) {
-  .home {
-    background-position: top;
-  }
   .home .container .home-content .text-1 {
     font-size: 24px;
   }
@@ -64,6 +61,11 @@
   }
   .home .container .home-content .text-3 {
     font-size: 35px;
+  }
+}
+@media (max-width: 991px) {
+  .home {
+    background-position: right;
   }
 }
 /* End Home */
