--- a/css/style.css
+++ b/css/style.css
@@ -448,6 +448,57 @@ img {
   align-items: center;
   font-size: 20px;
 }
+.social-media {
+}
+.social-media ul {
+  display: flex;
+  align-items: center;
+  gap: 35px;
+}
+.social-media ul li {
+  width: 50px;
+  height: 50px;
+  background-color: var(--bg-card);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: 0.3s;
+}
+.social-media ul li.face a i {
+  color: #1877f2;
+  transition: 0.3s;
+}
+.social-media ul li.face:hover {
+  background-color: #1877f2;
+}
+.social-media ul li.face:hover i {
+  color: white;
+  transform: scale(1.2);
+}
+.social-media ul li.linked a i {
+  color: #0a66c2;
+  transition: 0.3s;
+}
+.social-media ul li.linked:hover {
+  background-color: #0a66c2;
+}
+.social-media ul li.linked:hover i {
+  color: white;
+  transform: scale(1.2);
+}
+.social-media ul li.insta a i {
+  color: #fd1d1d;
+  transition: 0.3s;
+}
+.social-media ul li.insta:hover {
+  background-color: #fd1d1d;
+}
+.social-media ul li.insta:hover i {
+  color: white;
+  transform: scale(1.2);
+}
 
 .form-group {
   margin-bottom: 20px;
